# Jupyter_Video_Widget

./: .gitignore  MANIFEST.in  README.md  RELEASE.md  dev_compound.ipynb  example.ipynb  jupyter-video.json  requirements.txt  setup.cfg  setup.py
jpy_video/: __init__.py  _version.py  compound.py  monotext_widget.py  namespace.py  server.py  video.py
jpy_video/static/: extension.js  index.js  index.js.map
js/: README.md  package-lock.json  package.json  webpack.config.js
js/src/: embed.js  example_OLD.js  extension.js  index.js  jupyter-video.js  jupyterlab-plugin.js  jupyterlab_plugin.js  video.js
jupyter_video/: __init__.py  video.py
jupyter_video/static/: extension.js  index.js  index.js.map
jupyter_video_widget/: __init__.py  compound.py  example.py  namespace.py  server.py  struct.py  video.py
notebooks/: 01 - Example.ipynb  02 - Example custom host and port.ipynb  compound.ipynb  dev_compound.ipynb  example.ipynb
video_widget/: compound.py  video.py
video_widget/static/: extension.js  index.js  index.js.map
