
[metadata]
name = Jupyter_Video_Widget
author = Pierre V. Villeneuve
author_email = pierre.villeneuve@gmail.com
description = A Jupyter HTML5 Video Player Widget
long_description = file: README.md
url = https://github.com/Who8MyLunch/Jupyter_Video_Widget
keywords = ipython, jupyter, widgets, video, html5, player
license = MIT
platform = Jupyter


[bdist_wheel]
universal = True

[sdist]
keep-temp = False

[clean]
all = True




